compilateurDeca/src/test/deca/context/valid/sans_objet/types/conv_float_unary.deca
// Description:
//    Vérifie l'insertion de ConvFloat lors de l'utilisation d'un int dans une opération flottante unaire.
//
// Resultats:
//    Vérification réussie (insertion de ConvFloat).
// 
// Historique:
//    cree le 11/01/2026

{
    float f;
    int i = 1;
    f = -i; // L'entier doit être converti en flottant avant le moins unaire
}