compilateurDeca/src/test/deca/context/invalid/objet/champ_void.deca
// Description:
//    Erreur de syntaxe : déclaration d'une variable ou d'un champ de type 'void'.
//
// Resultats:
//    Erreur syntaxique ligne 11
//
// Historique:
//    cree le 13/01/2026

class A {
    void x;
}
{
}